RESOLVED FIXED205338
WebKitTestRunner should report GPU process crashes
https://bugs.webkit.org/show_bug.cgi?id=205338
Summary WebKitTestRunner should report GPU process crashes
youenn fablet
Reported 2019-12-17 06:57:30 PST
WebKitTestRunner should report GPU process crashes
Attachments
Patch (8.12 KB, patch)
2019-12-17 07:04 PST, youenn fablet
no flags
Patch (8.20 KB, patch)
2019-12-17 07:08 PST, youenn fablet
no flags
youenn fablet
Comment 1 2019-12-17 07:04:46 PST
youenn fablet
Comment 2 2019-12-17 07:08:11 PST
Tim Horton
Comment 3 2019-12-17 10:51:32 PST
Comment on attachment 385885 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=385885&action=review > Source/WebKit/UIProcess/API/C/WKContext.h:108 > + WKContextChildProcessDidCrashCallback gpuProcessDidCrash; > } WKContextClientV3; Don't you need to bump the struct version? Otherwise folks using V3 will be missing one zero in their initializers :P
youenn fablet
Comment 4 2019-12-17 10:53:28 PST
(In reply to Tim Horton from comment #3) > Comment on attachment 385885 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=385885&action=review > > > Source/WebKit/UIProcess/API/C/WKContext.h:108 > > + WKContextChildProcessDidCrashCallback gpuProcessDidCrash; > > } WKContextClientV3; > > Don't you need to bump the struct version? Otherwise folks using V3 will be > missing one zero in their initializers :P That should be fine, I bumped the version yesterday to v3 to report service worker process crashes.
Tim Horton
Comment 5 2019-12-17 11:03:32 PST
Comment on attachment 385885 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=385885&action=review >>> Source/WebKit/UIProcess/API/C/WKContext.h:108 >>> } WKContextClientV3; >> >> Don't you need to bump the struct version? Otherwise folks using V3 will be missing one zero in their initializers :P > > That should be fine, I bumped the version yesterday to v3 to report service worker process crashes. OH! Nice. Maybe throw a space before the "2" then?
WebKit Commit Bot
Comment 6 2019-12-17 12:35:02 PST
Comment on attachment 385885 [details] Patch Clearing flags on attachment: 385885 Committed r253639: <https://trac.webkit.org/changeset/253639>
WebKit Commit Bot
Comment 7 2019-12-17 12:35:04 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2019-12-17 12:36:21 PST
Note You need to log in before you can comment on or make changes to this bug.