WebKitTestRunner should report GPU process crashes https://bugs.webkit.org/show_bug.cgi?id=205338

Reviewed by Tim Horton.

Source/WebKit:

Expose a callback to notify of GPU process crash.
No change of behavior.

* UIProcess/API/C/WKContext.h:
* UIProcess/GPU/GPUProcessProxy.cpp:
(WebKit::GPUProcessProxy::gpuProcessCrashed):
* UIProcess/WebContextClient.cpp:
(WebKit::WebContextClient::gpuProcessDidCrash):
* UIProcess/WebContextClient.h:
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::gpuProcessCrashed):
* UIProcess/WebProcessPool.h:

Tools:

Report GPU process crashes.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::generatePageConfiguration):
(WTR::TestController::gpuProcessDidCrash):
* WebKitTestRunner/TestController.h:


Canonical link: https://commits.webkit.org/218546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253639 268f45cc-cd09-0410-ab3c-d52691b4dbfc